kubernetes/Build/apache-and-mysql.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: apache-mariadb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: viktor
    spec:
      containers:
      - name: apache
        image: viktor90/centos:test
        ports:
        - containerPort: 80

      - name: mariadb
        image: viktor90/centos:mariadb
        command: ["/usr/bin/mysqld_safe"]
        ports:
        - containerPort: 3306
