kubernetes/Build/configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: configmaptest
spec:
  containers:
  - name: testcont
    image: httpd:latest
