kubernetes/Build/httpd.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
spec:
  containers:
  - name: httpd
    image: httpd:latest
    ports:
    - containerPort: 80
