kubernetes/Build/mount-a-secret-in-volume.yml
apiVersion: v1
kind: Pod
metadata:
  name: secretpod
spec:
  containers:
  - name: mysecret
    image: httpd:latest
    volumeMounts:
    - name: testvol
      mountPath: "/etc/secret"
      readOnly: true
  volumes:
  - name: testvol
    secret:
      secretName: viktor
