kubernetes/Build/nginx-deployment-dev-1.8.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deplo-dev
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-deplo-dev
    spec:
      containers:
      - name: nginx-deplo-dev
        image: nginx:1.8
        ports:
        - containerPort: 80
