kubernetes/Build/elasticsearch-repl-controller.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: es-masters
  name: es-masters
  namespace: logging
spec:
  ports:
  - name: http
    port: 9200
    protocol: TCP
    targetPort: 9200
  - name: transport
    port: 9300
    protocol: TCP
    targetPort: 9300
  selector:
    app: es-masters
  type: ClusterIP
