kubernetes/Build/mysql-replica-stateful.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-replica
  namespace: default
  labels:
    mysql: replica
spec:
  ports:
  - name: mysql
    port: 3306
  type: ClusterIP
  selector:
    app: mysql-replica

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-replica
  namespace: default
spec:
  serviceName: mysql-replica
  replicas: 2
  selector:
    matchLabels:
      app: mysql-replica
  template:
    metadata:
      name: mysql-replica
      labels:
        app: mysql-replica
    spec:
      containers:
      - name: mysql
        image: mysql:5.6
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: configs
          mountPath: /etc/mysql/conf.d
        - name: shared-storage
          mountPath: /mnt
        lifecycle:
          postStart:
            exec:
              command:
              - bash
              - "-c"
              - |
                sleep 60
                echo "[client]" > /root/.my.cnf
                echo "user=root" >> /root/.my.cnf
                echo "password=${MYSQL_ROOT_PASSWORD}" >> /root/.my.cnf
                echo "GRANT REPLICATION SLAVE ON *.* TO replication@'%' IDENTIFIED BY 'replicator';" | mysql
                echo "flush privileges" | mysql
      volumes:
      - name: configs
        emptyDir: {}
      - name: shared-storage
        persistentVolumeClaim:
          claimName: shared-storage
  volumeClaimTemplates:
  - metadata:
      name: mysql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 2Gi
