kubernetes/Build/deploy-migrated-wordpress.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress-migrated
  name: wordpress-migrated
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress-migrated
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: migrated-mysql
  name: migrated-mysql
  namespace: default
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: migrated-mysql
  type: ClusterIP
  
---
  
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: testingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: viktor.example
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-migrated
          servicePort: 80
