kubernetes/Build/deploy.yml

apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${DEPLOY_WEB}
  name: ${DEPLOY_WEB}
  namespace: deploy
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ${DEPLOY_WEB}
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${DEPLOY_MYSQL}
  name: ${DEPLOY_MYSQL}
  namespace: deploy
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: ${DEPLOY_MYSQL}
  type: ClusterIP

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ${DEPLOY_WEB}
  namespace: deploy
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ${DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: ${DEPLOY_WEB}
          servicePort: 80
